// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeMysqlMigration > should escape backslashes in SQL 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class CheckPath implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add check "chk_path" on "paths"
    await runner.query(\`ALTER TABLE \\\`paths\\\` ADD CONSTRAINT \\\`chk_path\\\` CHECK (\\\`path\\\` LIKE 'C:\\\\\\\\%');\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`paths\\\` DROP CHECK \\\`chk_path\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration > should escape backticks in SQL within template literals 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class CheckName implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add check "chk_name" on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` ADD CONSTRAINT \\\`chk_name\\\` CHECK (\\\`name\\\` <> '');\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP CHECK \\\`chk_name\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration > should escape dollar signs in SQL 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class CheckPrice implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add check "chk_price" on "prices"
    await runner.query(\`ALTER TABLE \\\`prices\\\` ADD CONSTRAINT \\\`chk_price\\\` CHECK (\\\`amount\\\` > \\$0);\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`prices\\\` DROP CHECK \\\`chk_price\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration > should generate content with no custom name (generated class name) 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class Generated20260220090000 implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add column on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` ADD COLUMN \\\`email\\\` VARCHAR(255) NOT NULL DEFAULT '';\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP COLUMN \\\`email\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration > should generate full migration content for a single add_column 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class AddEmail implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add column on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` ADD COLUMN \\\`email\\\` VARCHAR(255) NOT NULL DEFAULT '';\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP COLUMN \\\`email\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration > should generate full migration content for drop_trigger operations 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class DropTrigger implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Drop trigger "trg_events_no_update" on "events"
    await runner.query(\`DROP TRIGGER IF EXISTS \\\`trg_events_no_update\\\`;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    // WARN: irreversible — Drop trigger "trg_events_no_update" on "events"
  }
}
"
`;

exports[`serializeMysqlMigration > should generate full migration content for multiple operations 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class CreateOrders implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Create table "orders"
    await runner.query(\`CREATE TABLE \\\`orders\\\` (\\\`id\\\` CHAR(36) NOT NULL, PRIMARY KEY (\\\`id\\\`)) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;\`);
    // Add column on "orders"
    await runner.query(\`ALTER TABLE \\\`orders\\\` ADD COLUMN \\\`total\\\` DECIMAL(10,2) NOT NULL DEFAULT 0;\`);
    // Add index "idx_total" on "orders"
    await runner.query(\`CREATE INDEX \\\`idx_total\\\` ON \\\`orders\\\` (\\\`total\\\` ASC);\`);
    // Add FK "fk_user" on "orders"
    await runner.query(\`ALTER TABLE \\\`orders\\\` ADD CONSTRAINT \\\`fk_user\\\` FOREIGN KEY (\\\`user_id\\\`) REFERENCES \\\`users\\\` (\\\`id\\\`) ON DELETE CASCADE;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`orders\\\` DROP FOREIGN KEY \\\`fk_user\\\`;\`);
    await runner.query(\`DROP INDEX \\\`idx_total\\\` ON \\\`orders\\\`;\`);
    await runner.query(\`ALTER TABLE \\\`orders\\\` DROP COLUMN \\\`total\\\`;\`);
    await runner.query(\`DROP TABLE IF EXISTS \\\`orders\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration > should generate full migration content for trigger operations 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class AddAppendOnlyTriggers implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Create trigger "trg_events_no_update" on "events"
    await runner.query(\`CREATE TRIGGER \\\`trg_events_no_update\\\` BEFORE UPDATE ON \\\`events\\\` FOR EACH ROW BEGIN SIGNAL SQLSTATE '45000' SET MESSAGE_TEXT = 'Updates not allowed on append-only table'; END;\`);
    // Create trigger "trg_events_no_delete" on "events"
    await runner.query(\`CREATE TRIGGER \\\`trg_events_no_delete\\\` BEFORE DELETE ON \\\`events\\\` FOR EACH ROW BEGIN SIGNAL SQLSTATE '45000' SET MESSAGE_TEXT = 'Deletes not allowed on append-only table'; END;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`DROP TRIGGER IF EXISTS \\\`trg_events_no_delete\\\`;\`);
    await runner.query(\`DROP TRIGGER IF EXISTS \\\`trg_events_no_update\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration > should handle empty plan with no operations 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class Empty implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
  }
}
"
`;

exports[`serializeMysqlMigration > should include WARN comment for irreversible drop_column in down body 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class DropLegacy implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Drop column "legacy" on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP COLUMN \\\`legacy\\\`;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    // WARN: irreversible — Drop column "legacy" on "users"
  }
}
"
`;

exports[`serializeMysqlMigration > should include WARN comment for irreversible drop_constraint in down body 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class DropCheck implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Drop constraint "chk_old" on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP CHECK \\\`chk_old\\\`;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    // WARN: irreversible — Drop constraint "chk_old" on "users"
  }
}
"
`;

exports[`serializeMysqlMigration > should produce correct filename with custom name 1`] = `"20260220090000-add-email.ts"`;

exports[`serializeMysqlMigration > should produce correct filename with generated name 1`] = `"20260220090000-generated.ts"`;

exports[`serializeMysqlMigration > should reverse down entries for correct undo ordering 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class Ordered implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Create table "orders"
    await runner.query(\`CREATE TABLE \\\`orders\\\` (\\\`id\\\` CHAR(36) NOT NULL, PRIMARY KEY (\\\`id\\\`)) ENGINE=InnoDB;\`);
    // Add index "idx_a" on "orders"
    await runner.query(\`CREATE INDEX \\\`idx_a\\\` ON \\\`orders\\\` (\\\`a\\\` ASC);\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`DROP INDEX \\\`idx_a\\\` ON \\\`orders\\\`;\`);
    await runner.query(\`DROP TABLE IF EXISTS \\\`orders\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration > should sanitize special characters in name for filename 1`] = `"20260220090000-my-cool-migration.ts"`;

exports[`serializeMysqlMigration > should set stable id and ts 1`] = `"00000000-0000-0000-0000-000000000001"`;

exports[`serializeMysqlMigration > should set stable id and ts 2`] = `"2026-02-20T09:00:00.000Z"`;

exports[`serializeMysqlMigration > should use modify_column with snapshot-based down sql 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class ModifyEmail implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Modify column "email" on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` MODIFY COLUMN \\\`email\\\` TEXT NOT NULL;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`users\\\` MODIFY COLUMN \\\`email\\\` VARCHAR(255) NOT NULL DEFAULT '';\`);
  }
}
"
`;

exports[`serializeMysqlMigration should escape backslashes in SQL 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class CheckPath implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add check "chk_path" on "paths"
    await runner.query(\`ALTER TABLE \\\`paths\\\` ADD CONSTRAINT \\\`chk_path\\\` CHECK (\\\`path\\\` LIKE 'C:\\\\\\\\%');\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`paths\\\` DROP CHECK \\\`chk_path\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration should escape backticks in SQL within template literals 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class CheckName implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add check "chk_name" on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` ADD CONSTRAINT \\\`chk_name\\\` CHECK (\\\`name\\\` <> '');\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP CHECK \\\`chk_name\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration should escape dollar signs in SQL 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class CheckPrice implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add check "chk_price" on "prices"
    await runner.query(\`ALTER TABLE \\\`prices\\\` ADD CONSTRAINT \\\`chk_price\\\` CHECK (\\\`amount\\\` > \\$0);\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`prices\\\` DROP CHECK \\\`chk_price\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration should generate content with no custom name (generated class name) 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class Generated20260220090000 implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add column on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` ADD COLUMN \\\`email\\\` VARCHAR(255) NOT NULL DEFAULT '';\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP COLUMN \\\`email\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration should generate full migration content for a single add_column 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class AddEmail implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Add column on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` ADD COLUMN \\\`email\\\` VARCHAR(255) NOT NULL DEFAULT '';\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP COLUMN \\\`email\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration should generate full migration content for drop_trigger operations 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class DropTrigger implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Drop trigger "trg_events_no_update" on "events"
    await runner.query(\`DROP TRIGGER IF EXISTS \\\`trg_events_no_update\\\`;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    // WARN: irreversible — Drop trigger "trg_events_no_update" on "events"
  }
}
"
`;

exports[`serializeMysqlMigration should generate full migration content for multiple operations 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class CreateOrders implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Create table "orders"
    await runner.query(\`CREATE TABLE \\\`orders\\\` (\\\`id\\\` CHAR(36) NOT NULL, PRIMARY KEY (\\\`id\\\`)) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;\`);
    // Add column on "orders"
    await runner.query(\`ALTER TABLE \\\`orders\\\` ADD COLUMN \\\`total\\\` DECIMAL(10,2) NOT NULL DEFAULT 0;\`);
    // Add index "idx_total" on "orders"
    await runner.query(\`CREATE INDEX \\\`idx_total\\\` ON \\\`orders\\\` (\\\`total\\\` ASC);\`);
    // Add FK "fk_user" on "orders"
    await runner.query(\`ALTER TABLE \\\`orders\\\` ADD CONSTRAINT \\\`fk_user\\\` FOREIGN KEY (\\\`user_id\\\`) REFERENCES \\\`users\\\` (\\\`id\\\`) ON DELETE CASCADE;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`orders\\\` DROP FOREIGN KEY \\\`fk_user\\\`;\`);
    await runner.query(\`DROP INDEX \\\`idx_total\\\` ON \\\`orders\\\`;\`);
    await runner.query(\`ALTER TABLE \\\`orders\\\` DROP COLUMN \\\`total\\\`;\`);
    await runner.query(\`DROP TABLE IF EXISTS \\\`orders\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration should generate full migration content for trigger operations 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class AddAppendOnlyTriggers implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Create trigger "trg_events_no_update" on "events"
    await runner.query(\`CREATE TRIGGER \\\`trg_events_no_update\\\` BEFORE UPDATE ON \\\`events\\\` FOR EACH ROW BEGIN SIGNAL SQLSTATE '45000' SET MESSAGE_TEXT = 'Updates not allowed on append-only table'; END;\`);
    // Create trigger "trg_events_no_delete" on "events"
    await runner.query(\`CREATE TRIGGER \\\`trg_events_no_delete\\\` BEFORE DELETE ON \\\`events\\\` FOR EACH ROW BEGIN SIGNAL SQLSTATE '45000' SET MESSAGE_TEXT = 'Deletes not allowed on append-only table'; END;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`DROP TRIGGER IF EXISTS \\\`trg_events_no_delete\\\`;\`);
    await runner.query(\`DROP TRIGGER IF EXISTS \\\`trg_events_no_update\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration should handle empty plan with no operations 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class Empty implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
  }
}
"
`;

exports[`serializeMysqlMigration should include WARN comment for irreversible drop_column in down body 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class DropLegacy implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Drop column "legacy" on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP COLUMN \\\`legacy\\\`;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    // WARN: irreversible — Drop column "legacy" on "users"
  }
}
"
`;

exports[`serializeMysqlMigration should include WARN comment for irreversible drop_constraint in down body 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class DropCheck implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Drop constraint "chk_old" on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` DROP CHECK \\\`chk_old\\\`;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    // WARN: irreversible — Drop constraint "chk_old" on "users"
  }
}
"
`;

exports[`serializeMysqlMigration should produce correct filename with custom name 1`] = `"20260220090000-add-email.ts"`;

exports[`serializeMysqlMigration should produce correct filename with generated name 1`] = `"20260220090000-generated.ts"`;

exports[`serializeMysqlMigration should reverse down entries for correct undo ordering 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class Ordered implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Create table "orders"
    await runner.query(\`CREATE TABLE \\\`orders\\\` (\\\`id\\\` CHAR(36) NOT NULL, PRIMARY KEY (\\\`id\\\`)) ENGINE=InnoDB;\`);
    // Add index "idx_a" on "orders"
    await runner.query(\`CREATE INDEX \\\`idx_a\\\` ON \\\`orders\\\` (\\\`a\\\` ASC);\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`DROP INDEX \\\`idx_a\\\` ON \\\`orders\\\`;\`);
    await runner.query(\`DROP TABLE IF EXISTS \\\`orders\\\`;\`);
  }
}
"
`;

exports[`serializeMysqlMigration should sanitize special characters in name for filename 1`] = `"20260220090000-my-cool-migration.ts"`;

exports[`serializeMysqlMigration should set stable id and ts 1`] = `"00000000-0000-0000-0000-000000000001"`;

exports[`serializeMysqlMigration should set stable id and ts 2`] = `"2026-02-20T09:00:00.000Z"`;

exports[`serializeMysqlMigration should use modify_column with snapshot-based down sql 1`] = `
"import type { MigrationInterface, SqlMigrationRunner } from "@lindorm/proteus";

export class ModifyEmail implements MigrationInterface {
  public readonly id = "00000000-0000-0000-0000-000000000001";
  public readonly ts = "2026-02-20T09:00:00.000Z";
  public readonly driver = "mysql";

  public async up(runner: SqlMigrationRunner): Promise<void> {
    // Modify column "email" on "users"
    await runner.query(\`ALTER TABLE \\\`users\\\` MODIFY COLUMN \\\`email\\\` TEXT NOT NULL;\`);
  }

  public async down(runner: SqlMigrationRunner): Promise<void> {
    await runner.query(\`ALTER TABLE \\\`users\\\` MODIFY COLUMN \\\`email\\\` VARCHAR(255) NOT NULL DEFAULT '';\`);
  }
}
"
`;
